--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2175,61 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<147x9298 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 70584 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  4135,  26169,  26401,  40412,  47404,  72142,  76091,  96832,\n",
-       "       100906, 107771])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.apply_along_axis(\n",
-    "    lambda x: get_movie_id(x), \n",
-    "    0, \n",
-    "    pd.DataFrame(users_predictions[1].toarray()[0], columns=['ratings']).nlargest(10, columns='ratings').index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_index = get_user_index(user_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2262,18 +2208,17 @@
     "    -------\n",
     "    movies_ids : list\n",
     "    \"\"\"\n",
-    "    user_index = get_user_index(user_id)\n",
-    "    movies_ids = np.apply_along_axis(\n",
-    "        lambda x: get_movie_id(x), \n",
-    "        0, \n",
-    "        pd.DataFrame(\n",
-    "                users_predictions[user_index].toarray()[0], \n",
-    "                columns=['ratings']\n",
+    "    movies_ids = (np.apply_along_axis(\n",
+    "            lambda x: get_movie_id(x), \n",
+    "            0, \n",
+    "            np.negative(\n",
+    "                users_predictions[get_user_index(user_id)]\n",
     "                )\n",
-    "            .nlargest(n, columns='ratings')\n",
-    "            .index\n",
+    "                .toarray()\n",
+    "                .argsort()[:, :n]\n",
+    "            )\n",
+    "            .tolist()[0]\n",
     "        )\n",
-    "    movies_ids = movies_ids.tolist()\n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
     "    return movies_ids"
@@ -2281,9 +2226,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-a71327ba24c1cd00",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the top 10 movies that we can recommend to John using collaborative filtering.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2305,328 +2269,100 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ratings</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4228</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>6442</th>\n",
+       "      <td>Belle époque</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "      <td>1992.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5672</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>94810</th>\n",
+       "      <td>Eva</td>\n",
+       "      <td>Drama|Fantasy|Sci-Fi</td>\n",
+       "      <td>2011.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7064</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>88448</th>\n",
+       "      <td>Paper Birds (Pájaros de papel)</td>\n",
+       "      <td>Comedy|Drama</td>\n",
+       "      <td>2010.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7339</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>78836</th>\n",
+       "      <td>Enter the Void</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>2009.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7559</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>128914</th>\n",
+       "      <td>Tom Segura: Completely Normal</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>2014.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8417</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>162344</th>\n",
+       "      <td>Tom Segura: Mostly Stories</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>2016.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8978</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>33649</th>\n",
+       "      <td>Saving Face</td>\n",
+       "      <td>Comedy|Drama|Romance</td>\n",
+       "      <td>2004.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>53355</th>\n",
+       "      <td>Sun Alley (Sonnenallee)</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "      <td>1999.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>53280</th>\n",
+       "      <td>Breed, The</td>\n",
+       "      <td>Horror|Thriller</td>\n",
+       "      <td>2006.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>412</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>513</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>965</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>994</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1257</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1471</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1584</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1671</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1822</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1907</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2046</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2151</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2239</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2248</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2387</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2499</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2540</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2609</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2632</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2636</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2731</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2774</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2835</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2952</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2966</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2995</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3170</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3196</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3398</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3558</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3624</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3625</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3672</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3716</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3771</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3798</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3835</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3897</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3903</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3952</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>2824</th>\n",
+       "      <td>On the Ropes</td>\n",
+       "      <td>Documentary|Drama</td>\n",
+       "      <td>1999.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      ratings\n",
-       "4228      5.0\n",
-       "5672      5.0\n",
-       "7064      5.0\n",
-       "7339      5.0\n",
-       "7559      5.0\n",
-       "8417      5.0\n",
-       "8978      5.0\n",
-       "47        5.0\n",
-       "85        5.0\n",
-       "235       5.0\n",
-       "412       5.0\n",
-       "513       5.0\n",
-       "965       5.0\n",
-       "994       5.0\n",
-       "1257      5.0\n",
-       "1471      5.0\n",
-       "1584      5.0\n",
-       "1671      5.0\n",
-       "1822      5.0\n",
-       "1907      5.0\n",
-       "2046      5.0\n",
-       "2151      5.0\n",
-       "2239      5.0\n",
-       "2248      5.0\n",
-       "2387      5.0\n",
-       "2499      5.0\n",
-       "2540      5.0\n",
-       "2609      5.0\n",
-       "2632      5.0\n",
-       "2636      5.0\n",
-       "2731      5.0\n",
-       "2774      5.0\n",
-       "2835      5.0\n",
-       "2952      5.0\n",
-       "2966      5.0\n",
-       "2995      5.0\n",
-       "3170      5.0\n",
-       "3196      5.0\n",
-       "3398      5.0\n",
-       "3558      5.0\n",
-       "3624      5.0\n",
-       "3625      5.0\n",
-       "3672      5.0\n",
-       "3716      5.0\n",
-       "3771      5.0\n",
-       "3798      5.0\n",
-       "3835      5.0\n",
-       "3897      5.0\n",
-       "3903      5.0\n",
-       "3952      5.0"
+       "                                  title                genres    year\n",
+       "movieId                                                              \n",
+       "6442                       Belle époque        Comedy|Romance  1992.0\n",
+       "94810                               Eva  Drama|Fantasy|Sci-Fi  2011.0\n",
+       "88448    Paper Birds (Pájaros de papel)          Comedy|Drama  2010.0\n",
+       "78836                    Enter the Void                 Drama  2009.0\n",
+       "128914    Tom Segura: Completely Normal                Comedy  2014.0\n",
+       "162344       Tom Segura: Mostly Stories                Comedy  2016.0\n",
+       "33649                       Saving Face  Comedy|Drama|Romance  2004.0\n",
+       "53355           Sun Alley (Sonnenallee)        Comedy|Romance  1999.0\n",
+       "53280                        Breed, The       Horror|Thriller  2006.0\n",
+       "2824                       On the Ropes     Documentary|Drama  1999.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "( pd.DataFrame(\n",
-    "                users_predictions[get_user_index(john_id)].toarray()[0], \n",
-    "                columns=['ratings']\n",
-    "                )\n",
-    "            .nlargest(50, columns='ratings'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6442, 33649, 78836, 88448, 94810, 128914, 162344, 53, 99, 283]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_top_n(users_predictions,john_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-a71327ba24c1cd00",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/jrr/batch6-workspace/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb Cell 54\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU11%20-%20Personalized%20Recommenders/Exercise%20notebook.ipynb#Y101sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m top_movies_ids \u001b[39m=\u001b[39m get_top_n(users_predictions,john_id)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU11%20-%20Personalized%20Recommenders/Exercise%20notebook.ipynb#Y101sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(json\u001b[39m.\u001b[39mdumps(\u001b[39mint\u001b[39m(\u001b[39msum\u001b[39m(top_movies_ids)))\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mce03c60619dc47c9cc0818d5da415a3d73918806fce620c6fa0f257415c8e1c9\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU11%20-%20Personalized%20Recommenders/Exercise%20notebook.ipynb#Y101sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(json\u001b[39m.\u001b[39mdumps(\u001b[39mint\u001b[39m(\u001b[39mlen\u001b[39m(top_movies_ids)))\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m4a44dc15364204a80fe80e9039455cc1608281820fe2b24f1e5233ade6af1dd5\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU11%20-%20Personalized%20Recommenders/Exercise%20notebook.ipynb#Y101sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mThese are the top 10 movies that we can recommend to John using collaborative filtering.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
     }
    ],
    "source": [
