--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2485,15 +2485,15 @@
     "    tags : pd.Series\n",
     "                        Series with the joined tags strings and movieId as index\n",
     "    \"\"\"\n",
-    "    # tags = ...\n",
+    "    tags = df.groupby('movieId').agg({'tag': lambda tag_lst: \" \".join([tag.lower().replace(\" \", \"\") for tag in tag_lst])}).tag\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    return tags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
