--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -2557,7 +2557,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movieId\n",
+       "1                                      pixar pixar fun\n",
+       "2            fantasy magicboardgame robinwilliams game\n",
+       "5                                     pregnancy remake\n",
+       "7                                               remake\n",
+       "11                                  politics president\n",
+       "                              ...                     \n",
+       "183611                      comedy funny rachelmcadams\n",
+       "184471    adventure aliciavikander videogameadaptation\n",
+       "187593                 joshbrolin ryanreynolds sarcasm\n",
+       "187595                           emiliaclarke starwars\n",
+       "193565                   anime comedy gintama remaster\n",
+       "Name: tag, Length: 1551, dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_document_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ratings.groupby('movieId')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>year</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>adventure animation children comedy fantasy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pixar pixar fun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>adventure children fantasy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>fantasy magicboardgame robinwilliams game</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>comedy romance</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>comedy drama romance</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>comedy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pregnancy remake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188797</th>\n",
+       "      <td>comedy</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188833</th>\n",
+       "      <td>adventure comedy fantasy</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189381</th>\n",
+       "      <td>action crime thriller</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189713</th>\n",
+       "      <td>comedy crime drama</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190183</th>\n",
+       "      <td>sci-fi thriller</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9298 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              genres    year decade  \\\n",
+       "movieId                                                               \n",
+       "1        adventure animation children comedy fantasy  1995.0   2000   \n",
+       "2                         adventure children fantasy  1995.0   2000   \n",
+       "3                                     comedy romance  1995.0   2000   \n",
+       "4                               comedy drama romance  1995.0   2000   \n",
+       "5                                             comedy  1995.0   2000   \n",
+       "...                                              ...     ...    ...   \n",
+       "188797                                        comedy  2018.0   2020   \n",
+       "188833                      adventure comedy fantasy  2018.0   2020   \n",
+       "189381                         action crime thriller  2018.0   2020   \n",
+       "189713                            comedy crime drama  2018.0   2020   \n",
+       "190183                               sci-fi thriller  2018.0   2020   \n",
+       "\n",
+       "                                              tags  \n",
+       "movieId                                             \n",
+       "1                                  pixar pixar fun  \n",
+       "2        fantasy magicboardgame robinwilliams game  \n",
+       "3                                                   \n",
+       "4                                                   \n",
+       "5                                 pregnancy remake  \n",
+       "...                                            ...  \n",
+       "188797                                              \n",
+       "188833                                              \n",
+       "189381                                              \n",
+       "189713                                              \n",
+       "190183                                              \n",
+       "\n",
+       "[9298 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_movies_processed.loc[df_ratings.groupby('movieId').agg({'rating': sum}).rating.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2582,7 +2797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2594,20 +2809,176 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>year</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>adventure animation children comedy fantasy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pixar pixar fun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>adventure children fantasy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>fantasy magicboardgame robinwilliams game</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>comedy romance</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>comedy drama romance</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>comedy</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pregnancy remake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193581</th>\n",
+       "      <td>action animation comedy fantasy</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193583</th>\n",
+       "      <td>animation comedy fantasy</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193585</th>\n",
+       "      <td>drama</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193587</th>\n",
+       "      <td>action animation</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193609</th>\n",
+       "      <td>comedy</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>1990</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9742 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              genres    year decade  \\\n",
+       "movieId                                                               \n",
+       "1        adventure animation children comedy fantasy  1995.0   2000   \n",
+       "2                         adventure children fantasy  1995.0   2000   \n",
+       "3                                     comedy romance  1995.0   2000   \n",
+       "4                               comedy drama romance  1995.0   2000   \n",
+       "5                                             comedy  1995.0   2000   \n",
+       "...                                              ...     ...    ...   \n",
+       "193581               action animation comedy fantasy  2017.0   2020   \n",
+       "193583                      animation comedy fantasy  2017.0   2020   \n",
+       "193585                                         drama  2017.0   2020   \n",
+       "193587                              action animation  2018.0   2020   \n",
+       "193609                                        comedy  1991.0   1990   \n",
+       "\n",
+       "                                              tags  \n",
+       "movieId                                             \n",
+       "1                                  pixar pixar fun  \n",
+       "2        fantasy magicboardgame robinwilliams game  \n",
+       "3                                                   \n",
+       "4                                                   \n",
+       "5                                 pregnancy remake  \n",
+       "...                                            ...  \n",
+       "193581                                              \n",
+       "193583                                              \n",
+       "193585                                              \n",
+       "193587                                              \n",
+       "193609                                              \n",
+       "\n",
+       "[9742 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_movies_processed = df_movies[[\"genres\", \"year\"]]\n",
-    "# df_movies_processed[\"decade\"] = ...\n",
-    "# df_movies_processed[\"genres\"] = ...\n",
-    "# df_movies_processed[\"tags\"] = ...\n",
-    "# df_movies_processed_w_ratings = ...\n",
+    "df_movies_processed[\"decade\"] = df_movies.year.apply(extract_decade)\n",
+    "df_movies_processed[\"genres\"] = df_movies.genres.apply(lambda x: \" \".join([tag.lower().replace(\" \", \"\") for tag in x.split(sep=\"|\")]))\n",
+    "df_movies_processed[\"tags\"] = df_document_tags\n",
+    "df_movies_processed[\"tags\"] = df_movies_processed[\"tags\"].fillna(\"\")\n",
+    "df_movies_processed_w_ratings = df_movies_processed.loc[df_ratings.groupby('movieId').agg({'rating': sum}).rating.index].drop(columns='year')\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "df_movies_processed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2621,7 +2992,97 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>adventure animation children comedy fantasy</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pixar pixar fun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>adventure children fantasy</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>fantasy magicboardgame robinwilliams game</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>comedy romance</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>comedy drama romance</td>\n",
+       "      <td>2000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>comedy</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>pregnancy remake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              genres decade  \\\n",
+       "movieId                                                       \n",
+       "1        adventure animation children comedy fantasy   2000   \n",
+       "2                         adventure children fantasy   2000   \n",
+       "3                                     comedy romance   2000   \n",
+       "4                               comedy drama romance   2000   \n",
+       "5                                             comedy   2000   \n",
+       "\n",
+       "                                              tags  \n",
+       "movieId                                             \n",
+       "1                                  pixar pixar fun  \n",
+       "2        fantasy magicboardgame robinwilliams game  \n",
+       "3                                                   \n",
+       "4                                                   \n",
+       "5                                 pregnancy remake  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "assert df_movies_processed_w_ratings.shape == (9298, 3)\n",
     "assert ('genres' and 'decade' and 'tags') in df_movies_processed_w_ratings.columns\n",
